--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/superjoe30/node-sox"
+    "url": "https://github.com/lepinsk/node-sox"
   },
   "author": "Andrew Kelley",
   "keywords": [
